# DocsRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Notes/: 01-rag-concepts.md  02-architecture-decisions.md  03-python-concepts.md  04-interview-oneliners.md
eval/: golden_qa.json  test_eval.py
scripts/: smoke_groq.py
src/docsrag/: api.py  ask.py  config.py  embeddings.py  generate.py  ingest.py  llm.py  models.py  retrieval.py  search.py  vectorstore.py
