[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "fastembed>=0.8.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]
[project.scripts]
docsrag-ingest = "docsrag.ingest:main"
docsrag-search = "docsrag.search:main"
docsrag-ask = "docsrag.ask:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docsrag"]

[tool.pytest.ini_options]
pythonpath = ["src"]